--- a/frontend/src/components/userHeader/index.module.scss
+++ b/frontend/src/components/userHeader/index.module.scss
@@ -22,6 +22,7 @@
   $size: max(150px, 15vh);
 
   min-width: $size;
+  max-width: $size;
   height: $size;
   overflow: hidden;
   position: relative;
