--- a/frontend/src/screens/messages/index.module.scss
+++ b/frontend/src/screens/messages/index.module.scss
@@ -6,6 +6,7 @@
   // background-color: rgb(19, 19, 19);
   img {
     min-width: max(40px, 7vh);
+    max-width: max(40px, 7vh);
     height: max(40px, 7vh);
   }
 }
